--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="modelo\Boleto.cs" />
     <Compile Include="modelo\Cliente.cs" />
     <Compile Include="modelo\Persona.cs" />
     <Compile Include="modelo\Reservacion.cs" />
