Clases teminadas con los métodos getter´s y setter´s

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -52,12 +52,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="modelo\Asiento.cs" />
     <Compile Include="modelo\Boleto.cs" />
     <Compile Include="modelo\Cartelera.cs" />
     <Compile Include="modelo\Cliente.cs" />
     <Compile Include="modelo\Pelicula.cs" />
     <Compile Include="modelo\Persona.cs" />
     <Compile Include="modelo\Reservacion.cs" />
+    <Compile Include="modelo\Sala.cs" />
     <Compile Include="modelo\Taquillero.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
