Comensar con los forms

--- a/Partido/Partido/Partido.csproj
+++ b/Partido/Partido/Partido.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="campeonato\FormArbitro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="campeonato\FormArbitro.Designer.cs">
+      <DependentUpon>FormArbitro.cs</DependentUpon>
+    </Compile>
     <Compile Include="championship\Arbitro.cs" />
     <Compile Include="championship\Cancha.cs" />
     <Compile Include="championship\Equipo.cs" />
@@ -59,6 +65,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="campeonato\FormArbitro.resx">
+      <DependentUpon>FormArbitro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,9 +93,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="campeonato\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
